--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: ewbeez82
+title: Eric Beezhold
 email: ewbeez82@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Blogging for fun.
+  Blogging for fun. This cover's anything that I find interesting. Devops, cloud computing, API's, cars.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://ewbeez82.github.io" # the base hostname & protocol for your site
 twitter_username: ewbeez82
